--- a/concourse/tasks/gcloud-package-operation.yaml
+++ b/concourse/tasks/gcloud-package-operation.yaml
@@ -17,4 +17,4 @@ run:
   args:
   - -exc
   - |
-    gcloud pubsub topics publish $TOPIC --message "{\"type\": \"${TYPE}\", \"request\": {\"gcsfiles\": [((package_path))], \"universe\": \"((universe))\", \"repo\": \"((repo))\"}}"
+    gcloud pubsub topics publish $TOPIC --message "{\"type\": \"${TYPE}\", \"request\": {\"gcsfiles\": [((package_paths))], \"universe\": \"((universe))\", \"repo\": \"((repo))\"}}"
