--- a/concourse/tasks/generate-build-id.yaml
+++ b/concourse/tasks/generate-build-id.yaml
@@ -13,4 +13,4 @@ run:
   path: sh
   args:
   - -exc
-  - "buildid=((linux_date)); echo $buildid | tee build-id-dir/build-id; touch build-id-dir/((prefix))-v${buildid}.tar.gz"
+  - "buildid=((id)); echo $buildid | tee build-id-dir/build-id; touch build-id-dir/((prefix))-v${buildid}.tar.gz"
