--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -40,6 +40,8 @@ jobs:
     file: guest-test-infra/concourse/pipelines/bare-metal-image-build.yaml
   - set_pipeline: windows-image-build
     file: rendered/windows-image-build.json
+  - set_pipeline: windows-image-staging-build
+    file: rendered/windows-image-build-staging.json
   - set_pipeline: container-build
     file: rendered/container-build.json
   - set_pipeline: rhui-release
