--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -42,6 +42,8 @@ jobs:
     file: rendered/windows-image-build.json
   - set_pipeline: windows-image-build-staging
     file: rendered/windows-image-build-staging.json
+  - set_pipeline: windows-image-build-standard
+    file: rendered/windows-image-build-standard.json
   - set_pipeline: container-build
     file: rendered/container-build.json
   - set_pipeline: rhui-release
