Replace go get calls with go install

--- a/container_images/gocheck/Dockerfile
+++ b/container_images/gocheck/Dockerfile
@@ -15,7 +15,7 @@ FROM golang:1.19
 
 RUN apt-get update && apt-get install -y git && \
     rm -rf /var/cache/apt/archives
-RUN go get -u golang.org/x/lint/golint
+RUN go install golang.org/x/lint/golint@latest
 
 # Copy this Dockerfile for debugging.
 COPY Dockerfile Dockerfile
