--- a/container_images/jsonnet-go/Dockerfile
+++ b/container_images/jsonnet-go/Dockerfile
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM golang:1.19-bullseye
+FROM golang:bullseye
 
 RUN go install github.com/google/go-jsonnet/cmd/jsonnet@latest
 
