--- a/container_images/cleanerupper/Dockerfile
+++ b/container_images/cleanerupper/Dockerfile
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM golang:bullseye as build
+FROM golang:1.20.6-bullseye as build
 
 WORKDIR /build
 COPY . .
