--- a/concourse/tasks/image-test-args.yaml
+++ b/concourse/tasks/image-test-args.yaml
@@ -15,6 +15,6 @@ run:
   - -zone=us-central1-a
   - -test_projects=compute-image-test-pool-002,compute-image-test-pool-003,compute-image-test-pool-004,compute-image-test-pool-005
   - -images=((images))
-  - -exclude=(oslogin)|(storage_perf)|(network_perf)
+  - -exclude=(oslogin)|(storageperf)|(networkperf)
   - -machine_type=((machine-type))
   - ((extra-args))
