--- a/imagetest/Dockerfile
+++ b/imagetest/Dockerfile
@@ -22,31 +22,7 @@ ENV CGO_ENABLED 0
 ENV GOOS linux
 ENV GO111MODULE on
 
-RUN go mod download
-RUN go build -o /out/wrapper.amd64 ./cmd/wrapper/main.go
-RUN GOARCH=arm64 go build -o /out/wrapper.arm64 ./cmd/wrapper/main.go
-# Setting the windows file names to respect 8.3 file naming.
-RUN GOOS=windows GOARCH=amd64 go build -o /out/wrapp64.exe ./cmd/wrapper/main.go
-RUN GOOS=windows GOARCH=386 go build -o /out/wrapp32.exe ./cmd/wrapper/main.go
-RUN go build -o /out/manager ./cmd/manager/main.go
-RUN cd test_suites; for suite in *; do \
-  [[ -d $suite ]] || continue; \
-  cd $suite; \
-  go test -c -tags cit || exit 1; \
-  ./"${suite}.test" -test.list '.*' > /out/"${suite}_tests.txt" || exit 1; \
-  mv "${suite}.test" "/out/${suite}.amd64.test" || exit 1; \
-  GOARCH=arm64 go test -c -tags cit || exit 1; \
-  mv "${suite}.test" "/out/${suite}.arm64.test" || exit 1; \
-  GOOS=windows GOARCH=amd64 go test -c -tags cit || exit 1; \
-  if [ -f "${suite}.test.exe" ]; then \
-    mv "${suite}.test.exe" "/out/${suite}64.exe" || exit 1; \
-  fi; \
-  GOOS=windows GOARCH=386 go test -c -tags cit || exit 1; \
-  if [ -f "${suite}.test.exe" ]; then \
-    mv "${suite}.test.exe" "/out/${suite}32.exe" || exit 1; \
-  fi; \
-  cd ..; \
-  done
+RUN ./local_build.sh -o /out
 
 FROM alpine:latest
 RUN apk add --no-cache openssh-keygen
