send google creds for private guest os owned registry images

--- a/concourse/tasks/gotest.yaml
+++ b/concourse/tasks/gotest.yaml
@@ -2,10 +2,11 @@
 platform: linux
 
 image_resource:
-  type: registry-image
+  type: registry-image-private
   source:
     repository: gcr.io/gcp-guest/gotest
     tag: latest
+    google_auth: true
 
 inputs:
 - name: repo
