--- a/concourse/tasks/publish-coverage.yaml
+++ b/concourse/tasks/publish-coverage.yaml
@@ -2,9 +2,10 @@
 platform: linux
 
 image_resource:
-  type: registry-image
+  type: registry-image-private
   source:
     repository: gcr.io/gcp-guest/concourse-metrics
+    google_auth: true
 
 run:
   path: /publish-coverage
