pipeline-set: use registry-image-private
Add the registry-image-private resource type as a resource and use it
instead of registry-image.

--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -1,4 +1,10 @@
 ---
+resource_types:
+- name: guest-image-private
+  type: registry-image
+  source:
+    repository: gcr.io/compute-image-tools/registry-image-forked
+
 resources:
 - name: guest-test-infra
   type: git
