--- a/concourse/tasks/render-templates.yaml
+++ b/concourse/tasks/render-templates.yaml
@@ -1,7 +1,7 @@
 platform: linux
 
 image_resource:
-  type: registry-image
+  type: registry-image-private
   source:
     repository: gcr.io/gcp-guest/jsonnet-go
     tag: latest
