--- a/concourse/tasks/render-templates.yaml
+++ b/concourse/tasks/render-templates.yaml
@@ -1,5 +1,11 @@
 platform: linux
 
+resource_types:
+- name: guest-image-private
+  type: registry-image
+  source:
+    repository: gcr.io/compute-image-tools/registry-image-forked
+
 image_resource:
   type: registry-image-private
   source:
