Use guest-image-private resource_type (#957)
* Use guest-image-private resource_type

* guest-image-private -> registry-image-private

--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -1,10 +1,9 @@
 ---
 resource_types:
-- name: guest-image-private
+- name: registry-image-private
   type: registry-image
   source:
     repository: gcr.io/compute-image-tools/registry-image-forked
-
 resources:
 - name: guest-test-infra
   type: git
