render-template: enable debug for resource type

--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -5,6 +5,7 @@ resource_types:
   source:
     repository: gcr.io/compute-image-tools/registry-image-forked
     tag: latest
+    debug: true
 
 resources:
 - name: guest-test-infra
